[project]
name = "mrjk-clak"
version = "0.4.0"
description = "Command Line avec Klass"
authors = [
    {name = "mrjk <mrjk.78@gmail.com>"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "argcomplete (>=3.6.2,<4.0.0)",
    "prettytable (>=3.16.0,<4.0.0)"
]

[project.optional-dependencies]
colors = ["coloredlogs (>=15.0.1,<16.0.0)"]

[tool.poetry]
packages = [{include = "clak/"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Dependencies groups
# ========================

#[tool.poetry.dependencies]
#python = "^3.9"
#argcomplete = "^3.5.3"
#prettytable = "^3.14.0"

[tool.poetry.group.dev.dependencies]
coloredlogs = "^15.0.1"
black = "^24.10.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
jupyterlab = "^4.3.4"
pytest-regressions = "^2.6.0"
pytest-clarity = "^1.0.1"
pylint = "^3.3.3"
yamllint = "^1.35.1"
pymarkdownlnt = "^0.9.26"
pytest-tagging = "^1.6.0"
sh = "^2.2.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.49"
mkdocs-simple-hooks = "^0.1.5"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pylint = "^3.3.3"


# Poetry bumpversion
# ========================
mdx-truly-sane-lists = "^1.3"
mkdocs-awesome-pages-plugin = "^2.10.1"


[tool.poetry_bumpversion.file."clak/__init__.py"]


# Pytest config
# ========================
[tool.pytest.ini_options]
pythonpath = [
  ".", "tests"
]

